--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependancies": {
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "readline-sync": "^1.2.21" //temporary
   }
 }
