--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "steam_sig_generator",
   "version": "0.0.1",
   "description": "uses steam api to generate a customaizable steam profile image",
-  "dependancies": {
+  "dependencies": {
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "request": "^2.65.0",
-    "body-parser": "^1.14.1"
-  },
-  "dependencies": {
+    "body-parser": "^1.14.1",
     "bluebird": "^3.0.5"
   }
 }
