--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "gm": "^1.21.1",
