--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
@@ -15,5 +17,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/drakemain/steamsig.git"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
