--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
@@ -20,5 +18,10 @@
   },
   "scripts": {
     "test": "mocha"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "mocha": "^3.1.0"
   }
 }
