--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
+    "canvas": "^1.6.2",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
