ignore all sublime files

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ assets/profiles/
 config/key.txt
 config/.env
 .eslintrc
-steamsig.sublime-project
-steamsig.sublime-workspace
+*.sublime-project
+*.sublime-workspace
