--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
     "gm": "^1.21.1",
+    "lodash": "^4.17.4",
     "request": "^2.65.0",
     "request-promise": "^4.1.1"
   },
